--- a/volume.yaml
+++ b/volume.yaml
@@ -2,6 +2,7 @@ kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
   name: local-storage
+  namespace: edw-jenkins
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 
@@ -16,7 +17,7 @@ spec:
   storageClassName: local-storage
   claimRef:
     name: jenkins-pv-claim
-    namespace: jenkins
+    namespace: edw-jenkins
   capacity:
     storage: 10Gi
   accessModes:
@@ -37,7 +38,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-pv-claim
-  namespace: jenkins
+  namespace: edw-jenkins
 spec:
   storageClassName: local-storage
   accessModes:
