--- a/deployment.yaml
+++ b/deployment.yaml
@@ -84,4 +84,5 @@ spec:
               readOnly: true
       volumes:
         - name: helm
-          emptyDir: {}
+          persistentVolumeClaim: 
+            claimName: jenkins-pv-claim 
