--- a/deployment.yaml
+++ b/deployment.yaml
@@ -35,7 +35,7 @@ spec:
               apt-get clean
               | curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 && \
               chmod +x get_helm.sh && \
-              ./get_helm.sh; cp /usr/local/bin/* /dependencies/ ;sleep 100;",
+              ./get_helm.sh; cp /usr/local/bin/* /dependencies/ ;",
             ]
           volumeMounts:
             - name: helm
